Chore: remove script

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "npm test -- --watchAll",
-    "build": "tsc -p tsconfig.json",
-    "precommit": "npm test"
+    "build": "tsc -p tsconfig.json"
   },
   "author": "Mark Goho",
   "license": "MIT",
