--- a/package.json
+++ b/package.json
@@ -16,14 +16,25 @@
     "@types/node": "^8.0.46",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
+    "lint-staged": "^4.3.0",
+    "prettier": "^1.7.4",
     "ts-jest": "^21.1.3",
     "typescript": "^2.5.3"
   },
   "jest": {
-    "moduleFileExtensions": ["ts", "js"],
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
     "transform": {
       ".ts": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": ".*\\.spec\\.ts$"
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "prettier --write --no-semi --single-quote --trailing-comma es5",
+      "git add"
+    ]
   }
 }
