--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "lint-staged": {
     "src/**/*.ts": [
-      "prettier --write --no-semi --single-quote --trailing-comma es5",
+      "prettier --write --single-quote --trailing-comma es5",
       "git add"
     ]
   }
